fixed updateTodo and add todo - got alle of the todos for a month by a api
